--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Streamdata.io API Gallery - Template
+title: Streamdata.io API Gallery - AWS CloudTrail
 ---
 
 {% assign listing_object = site.listings %}
